--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<main class="min-h-[calc(100vh-64px-68px)]">
+<main class="min-h-[calc(100vh-64px-68px)] h-full">
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
