--- a/src/app/pages/home/home-page.component.html
+++ b/src/app/pages/home/home-page.component.html
@@ -1,5 +1,5 @@
 <section
-  class="bg-gradient-to-r from-primary/10 to-primary min-h-[calc(100vh-64px-68px)] flex items-center justify-center"
+  class="bg-gradient-to-r from-primary/0 to-primary/60 min-h-[calc(100vh-64px-68px)] flex items-center justify-center"
 >
   <div class="text-center p-8 max-w-4xl mx-auto">
     <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-4 animate-fade-in-down">
